# mini-telegram-name-timing-sync

./: .gitignore  ACCEPTANCE.md  LICENSE  README.md  config.example.json  install.sh  pyproject.toml
packaging/: telegram-name-timing-sync.service
src/mini_telegram_name_timing_sync/: cli.py  core.py
tests/: test_core.py
